// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly 1`] = `
<section>
  <Container
    className=""
  >
    <h1>
      Repos
    </h1>
    <p>
      Lorem ipsum dolar sit amet.
    </p>
  </Container>
</section>
`;

exports[`renders correctly without subtitle 1`] = `
<section>
  <Container
    className=""
  >
    <h1>
      Repos
    </h1>
  </Container>
</section>
`;
